fix temperature list title style to not break when on ios safari 10.2 or lower

--- a/src/sass/screen/_history.scss
+++ b/src/sass/screen/_history.scss
@@ -7,7 +7,8 @@
 morph-list-view {
   margin-bottom: 0;
 }
-morph-list-view-title {
+
+morph-list-view-title.temperature-list-title {
 	background-color: #eff0f4;
 	margin: 0;
 	padding: 10px;
